java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint7.pass
package org.netbeans.test.java.hints;

import javax.swing.JButton;
import org.netbeans.test.java.hints.pkg.ImplementAbstractMethods7Usee1;
import org.netbeans.test.java.hints.pkg.ImplementAbstractMethods7Usee2;

/**
 * @author leon chiver
 */
public class ImplementAbstractMethods7 extends ImplementAbstractMethods7Usee2 
        implements ImplementAbstractMethods7Usee1 {

    public ImplementAbstractMethods7() {
    }
    
    public void createStuff() {
    }

    @Override
    protected boolean resolve() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    public String doStuff() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    public int resolveStuff(JButton button) {
        throw new UnsupportedOperationException("Not supported yet.");
    }

}
